# media

./: .clang-format  .gitignore  .travis.yml  404.html  CMakeLists.txt  CMakeSettings.json  LICENSE  appveyor.yml  azure-pipelines.yml  index.html  mkdocs.yml  readme.md  requirements.txt  search.html  sitemap.xml
annotated/: index.html
azure/: steps-win-llvm.yml  steps-win-vs.yml
class_member_enums/: index.html
class_member_functions/: index.html
class_member_typedefs/: index.html
class_member_variables/: index.html
class_members/: index.html
classdevice__group__t/: index.html
classes/: index.html
classprocess__timer__t/: index.html
classqpc__timer__t/: index.html
dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
docs/: Doxyfile
files/: index.html
functions/: index.html
hierarchy/: index.html
macros/: index.html
media_8cpp/: index.html
media_8cpp_source/: index.html
media_8hpp/: index.html
media_8hpp_source/: index.html
media__print_8cpp/: index.html
media__print_8cpp_source/: index.html
mft0/: CMakeLists.txt  CustomProperties.h  Macros.h  MetadataInternal.h  SampleHelpers.h  dllmain.cpp  readme.txt  stdafx.h
modules/: index.html
namespaceMicrosoft_1_1WRL/: index.html
namespace_member_enums/: index.html
namespace_member_functions/: index.html
namespace_member_typedefs/: index.html
namespace_member_variables/: index.html
namespace_members/: index.html
namespaces/: index.html
namespacestd/: index.html
pages/: index.html
sample/: CMakeLists.txt  custom_mft.def  custom_mft.idl  dllmain.cpp  init.cpp  main.cpp
scripts/: build-vs2019-cmake-clang.bat
search/: search_index.json
socket_8cpp/: index.html
socket_8cpp_source/: index.html
socket_8hpp/: index.html
socket_8hpp_source/: index.html
src/: media.cpp  media.hpp  media_impl.cpp  media_print.cpp  media_reader.cpp  socket.hpp
structaddrinfo/: index.html
structcritical__section__t/: index.html
structread__item__t/: index.html
test/: direct11_test.cpp  dxva_test.cpp  main.cpp  media_test.cpp  readme.md  sink_test.cpp  source_test.cpp  transform_test.cpp  webcam_test.cpp  winrt_test.cpp
todo/: index.html
variables/: index.html
xml/: classdevice__group__t.xml  classprocess__timer__t.xml  classqpc__timer__t.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  media_8cpp.xml  media_8hpp.xml  media__print_8cpp.xml  namespaceMicrosoft_1_1WRL.xml  namespacestd.xml  socket_8cpp.xml  socket_8hpp.xml  structaddrinfo.xml  structcritical__section__t.xml  structread__item__t.xml  todo.xml
